Java Future API - remove JDK19 restriction support JDK8 (#210)
* Parameterise ExecutorService, and address PR feedback
* Remove Loom dependency, and clean-up future creation